test/c_frontend/negative/syntax_errors.c
/* Test syntax error cases - these should fail compilation */

/* Missing semicolon */
int main() {
    int x = 5  // Missing semicolon
    return 0;
}